--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "vue-router": "^3.1.3",
     "vue-splitpane": "^1.0.6",
     "vue-ueditor-wrap": "^2.4.1",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "xlsx": "^0.16.9"
   },
   "devDependencies": {
     "@d2-projects/vue-filename-injector": "^1.1.0",
